apps/core/longhorn-system/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-lab
  hostnames:
    - longhorn.lab.ciliber.to
  rules:
    - backendRefs:
      - group: ''
        kind: Service
        name: longhorn-frontend
        port: 80
        weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
